# BenchMHC-public

./: .codespell-ignore.txt  .env.template  .gcloudignore  .gitignore  .gitmessage  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: build.yml  ci.yml  docs.yml  experiment.yml  feat.yml  fix.yml  refactor.yml  style.yml  test.yml
.github/workflows/: build-documentation.yaml  enforce-labels.yaml  enforce-tasks.yaml  run-linters.yaml  run-tests.yaml
bench_mhc/: __init__.py  __main__.py  constants.py
bench_mhc/cli/: __init__.py  assign_protein_features.py  assign_protein_features_command.py  calibrate.py  calibrate_command.py  compute_nnalign_features.py  compute_nnalign_features_command.py  evaluate.py  evaluate_command.py  format_allele_feature.py  format_allele_feature_command.py  generate_decoys.py  generate_decoys_command.py  generate_performance_plot.py  generate_performance_plot_command.py  predict.py  predict_command.py  refine_peptides.py  refine_peptides_command.py  train.py  train_command.py
bench_mhc/custom_objects/: __init__.py  callbacks.py  layers.py  losses.py  metrics.py
bench_mhc/dataset/: __init__.py  cache.py  main.py
bench_mhc/model/: __init__.py  base.py  mhc1_nn_align.py
bench_mhc/utils/: bash.py  blastp.py  callbacks.py  deconvolution.py  device.py  enum.py  errors.py  format.py  io.py  kmers.py  mhc.py  mode.py  model.py  percentile_rank.py  predictions.py  ram.py  random.py  stage.py  stats.py
bench_mhc/utils/click/: __init__.py  arguments.py  callbacks.py  logic.py  types.py
bench_mhc/utils/logging/: __init__.py  experiment.py  mlflow.py  system.py
bench_mhc/utils/pl_namespace/: __init__.py  binary_metrics_namespace.py
bench_mhc/variables/: __init__.py  aa_seq.py  base.py  binary.py  multiclass.py  nn_align.py  numeric.py  variables.py
configuration/: nnalign_ba.yml  nnalign_ba_sa.yml  nnalign_sa.yml  template_performance_plot.yml
data/mappings/: allele2netmhc_pseudo_seq.json
docs/: CONTRIBUTING.md  LICENSE.md  README.md
docs/datasets/: README.md  cd8_epitopes.md  ms_ligands.md
docs/guides/: README.md  assign_protein_features.md  bucket.md  calibration.md  decoys_generation.md  glossary.md  inference.md  installation.md  refine_peptides.md  training.md  training_configuration.md
docs/guides/development/: README.md  documentation.md  mlflow.md  pre_commit_hooks.md  python_dependencies.md  repo_layout.md
docs/models/: README.md  netmhcpan41_v_0_0_0.md  netmhcpan41_v_1_1_0.md
docs/models/benchmarks/: benchmark_v_2_0_0.md
docs/reference/api/: assign_protein_features.md  calibrate.md  compute_allele_nnalign_features.md  evaluate.md  format_allele_feature.md  generate_decoys.md  generate_performance_plot.md  index.md  predict.md  refine_peptides.md  (+1 more)
includes/: acronyms.md
notebooks/: clean_netmhcpan_mappings.ipynb
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_cli_assign_protein_features.py  test_cli_calibrate.py  test_cli_compute_nnalign_features.py  test_cli_evaluate.py  test_cli_format_allele_feature.py  test_cli_generate_decoys.py  test_cli_generate_performance_plot.py  test_cli_predict.py  test_cli_refine_peptides.py  test_cli_train.py  test_main.py
tests/unit/: test_cli_assign_protein_features.py  test_cli_calibrate.py  test_cli_generate_decoys.py  test_cli_predit.py  test_cli_training.py  test_custom_objects_callbacks.py  test_custom_objects_layers.py  test_custom_objects_losses.py  test_custom_objects_metrics.py  test_dataset_cache.py  test_dataset_main.py  test_model_base.py  test_model_mhc1_nn_align.py  test_utils_bash.py  test_utils_blastp.py  test_utils_callbacks.py  test_utils_click_logic.py  test_utils_click_types.py  test_utils_deconvolution.py  test_utils_device.py  test_utils_io.py  test_utils_kmers.py  test_utils_logging_experiment.py  test_utils_logging_mlflow.py  test_utils_logging_system.py  test_utils_model.py  test_utils_percentile_rank.py  test_utils_pl_namespace_binary_metrics.py  test_utils_ram.py  test_utils_random.py  test_utils_stats.py  test_variables_aa_seq.py  test_variables_binary.py  test_variables_multiclass.py  test_variables_nn_align.py  test_variables_numeric.py  test_variables_variables.py
